--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,8 +44,7 @@ a:visited {
 	margin: 96px;
 	text-align: center;
 	font-family: 'Fredericka the Great', sans-serif;
-	
-	font-size: 40px;
+	font-size: 64px;
 }
 .experience-item-container{
 	display: flex;
@@ -65,10 +64,8 @@ a:visited {
 	margin-right: 40px;
 	margin-left: 40px;
 	margin-bottom:24px;
-	display:flex;
-	justify-content:center;
-	align-items:center;
 	overflow:hidden;
+	position: relative;
 }
 
 #nasa-logo{
@@ -76,14 +73,6 @@ a:visited {
 	max-width: 148px;
 }
 
-#nasa-blurb{
-	z-index: 20;
-	display: none;
-}
-
-#nasa-blurb:hover{
-	display:block;
-}
 
 #qualcomm-logo{
 	max-height: 200px;
@@ -99,6 +88,8 @@ a:visited {
 	width: 296px;
 	height: 200px;
 	position: absolute;
+	top: 0;
+	left: 0;
 }
 
 .blurb{
@@ -194,7 +185,7 @@ body{
 	font-size: 19px;
 	margin-top: 48px;
 	font-family: 'Hind', sans-serif;
-	margin-bottom: 112px;
+	margin-bottom: 80px;
 
 
 }
@@ -204,11 +195,11 @@ body{
 	*/
 	
 	font-family: 'Fredericka the Great', cursive;
-	font-size: 48px;
+	font-size: 64px;
 	margin-top: 112px;
 	margin-left: 64px;
 	margin-right: 168px;
-	border: 64px;
+
 }
 
 #about-content{
@@ -220,8 +211,9 @@ body{
 #contact{
 	font-size: 32px;
 	display: flex;
-	margin-top: 16px;
+	margin-top: 10px;
 }
+
 
 #linkedin-icon{
 	height:32px;
@@ -241,30 +233,23 @@ body{
 	font-size: 16px;
 }
 
-/**home**/
-
-/**
+/**home **/
 #home-body{
-	background-image: url("background.jpg");
-	height: 100%;
-	background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+	overflow: hidden;
+	display:none;
 }
-**/
 
-body#home-body {
-    /* The image used */
-    background: url('background.jpg');
+#background-image{
+	opacity: 0.8;
+	max-width: 100%;
+    max-height: 100%;
+    margin: auto;
 
-    /* Full height */
-    height: 100%; 
-
-    /* Center and scale the image nicely */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    position:absolute;
+    z-index: -1;
 }
+
+
 
 #intro-vid{
 	border: 2px outset #ddd;
