--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 /**multiples of 8
-colors: #C2DFE3, #B9D2B1**/
+nice colors: #C2DFE3, #B9D2B1, #F0F0F0
+colors: less dark blue: #A3C9E2 darker blue #79A7C6**/
 a:link{
     text-decoration: none;
    	color: black;
@@ -41,7 +42,7 @@ a:visited {
 }
 
 #all-experience{
-	margin: 96px;
+	margin: 88px;
 	text-align: center;
 	font-family: 'Fredericka the Great', sans-serif;
 	font-size: 64px;
@@ -58,8 +59,8 @@ a:visited {
 
 }
 .experience-box{
-	width: 296px;
-	height: 200px;
+	width: 312px;
+	height: 216px;
 	margin-top: 24px;
 	margin-right: 40px;
 	margin-left: 40px;
@@ -80,32 +81,36 @@ a:visited {
 	z-index: 10;
 }
 #berkeley-campus{
-	width: 296px;
-	height: 200px;
+	width: 312px;
+	height: 216px;
 }
 
 .label-background{
-	width: 296px;
-	height: 200px;
+	width: 312px;
+	height: 216px;
 	position: absolute;
 	top: 0;
 	left: 0;
 }
 
 .blurb{
-	width: 296px;
-	height: 140px;
+	width: 312px;
+	height: 168px;
 	/*margin-top: -164px;*/
 	/*margin-right: 40px;*/
 	/*margin-left: 40px;*/
 	/*margin-bottom:24px;*/
 	bottom: 0;
-	background-color: #C2DFE3;
+	background-color: #A3C9E2;
 	z-index: 20;
 	position: absolute;
-	/*display:flex;
-	justify-content:center;
-	align-items:center;*/
+	
+}
+
+.blurb-text{
+	font-size: 16px;
+	font-family: 'Hind', sans-serif;
+	margin: 16px;
 }
 
 .hidden{
@@ -235,24 +240,28 @@ body{
 
 /**home **/
 #home-body{
-	overflow: hidden;
 	display:none;
 }
 
-#background-image{
-	opacity: 0.8;
+#bg-img{
+	
 	max-width: 100%;
     max-height: 100%;
-    margin: auto;
-
-    position:absolute;
+    position:fixed;
+	top: 0; 
+	left: 0; 
     z-index: -1;
+    display:none;
+   
+
 }
 
 
 
 #intro-vid{
-	border: 2px outset #ddd;
+	border: 1px solid #D3D3D3;
+	box-shadow: 10px 10px 49px -10px #777;
+	border-radius: 5px
 }
 
 #intro{
@@ -263,7 +272,7 @@ body{
 }
 
 #intro-vid{
-	margin-top: 96px;
+	margin-top: 64px;
 }
 
 #home-view{
@@ -284,7 +293,11 @@ body{
 	background: transparent;
 }
 
+
 /**Travel**/
+#travel-here{
+	color: #79A7C6;
+}
 #travel-diary{
 	/*
 	font-family: 'League Script', cursive;
@@ -313,7 +326,7 @@ body{
 	display: flex;
 	margin-top: 16px;
 	margin-bottom: 16px;
-	margin-left: 120px;
+	margin-left: 320px;
 	display: none;
 	/*
 	font-family: 'League Script', cursive;
