updated css info

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 /**multiples of 8
-nice colors: #C2DFE3, #B9D2B1, #F0F0F0
-colors: less dark blue: #A3C9E2 darker blue #79A7C6**/
+nice colors: #C2DFE3, #B9D2B1, #F0F0F0, #829DA0, #A3C9E2, #79A7C6
+colors: less dark blue:#C2DFE3  darker blue:#829DA0; **/
 a:link{
     text-decoration: none;
    	color: black;
